--- a/Back-end/.project
+++ b/Back-end/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>aula17</name>
+	<name>triovendas</name>
 	<comment></comment>
 	<projects>
 	</projects>
