--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#Custom properties
+folder=//Users/jefma/Desktop/TrioVendas/client/public/uploads
